# machine-learning-zoomcamp-ml_models-homeworks

./: .gitignore  main.py  pyproject.toml
homework-8/: clothing_classifier_mobilenet_v4.onnx  homework_8.ipynb  notebook-tensorflow.ipynb  notebook_pytorch.ipynb
homework_6/: homework_6.ipynb  notebook.ipynb
