[project]
name = "machine-learning-zoomcamp-ml-models-homeworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras-image-helper==0.0.2",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "onnxscript==0.5.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "tensorflow[and-cuda]==2.20.0",
    "torch==2.9.1",
    "torchsummary==1.5.1",
    "torchvision==0.24.1",
    "xgboost==3.1.1",
]

[dependency-groups]
dev = [
    "ipykernel==7.1.0",
]
